style: fix color theme and spacing

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,10 +12,10 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #f8fbef;
-$secondary: #112900;
-$accent: #73a305;
+$primary: #00954a;
+$secondary: #07586b;
 
+$light: #ffffff;
 $dark: #1d1d1d;
 
 $positive: #21ba45;
